# mcdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
mcdk/: util.h
mcdk/preprocessor/: exception.h
mcdk/util/: base64.cc  base64.h  bool.h  compile_location.h  float.h  int16.h  int32.h  int64.h  int8.h  integer.h  preprocessor.h  string.h  throw.h  to_string.h
mcdk/util/detail/: base64.cc  base64.h
project/: project.sh
src/: CMakeLists.txt  base64.cc
tests/: CMakeLists.txt
tests/util/base64/: base64_test.cc  get_encoder_test.cc
